<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.DeviceStatsActivity">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/start_scan_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_btn_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/start"
                />

            <RadioButton
                android:id="@+id/stop_scan_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_btn_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/stop"/>
        </RadioGroup>


        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:visibility="gone"
            />

        <ProgressBar
            android:id="@+id/secondary_progress_bar"
            android:layout_width="@dimen/xxlarge_margin"
            android:layout_height="@dimen/xxlarge_margin"
            android:gravity="center"
            android:indeterminate="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/fileSizeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@color/white"
            android:clickable="true"
            android:padding="@dimen/small_margin"
            android:text="@string/file_size_header"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/averageFileSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@color/white"
            android:padding="@dimen/small_margin"
            android:text="@string/average_file_size"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/fileExtensionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@color/white"
            android:clickable="true"
            android:padding="@dimen/small_margin"
            android:text="@string/file_extension_header"
            android:visibility="gone"/>


        <Button
            android:id="@+id/share_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:visibility="gone"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:visibility="visible"/>

</LinearLayout>
